fix(header): added z-index to prevent image overlapping

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -9,6 +9,7 @@
   padding: 1rem;
   background: var(--fragment-color);
   box-shadow: var(--container-shadow);
+  z-index: 4;
 }
 
 .header__navbar {
